"""
    Module for styling components.
"""
from __future__ import annotations

import itertools
import os
import platform
import subprocess

from matplotlib import font_manager


class Style:
    """
        Base class for styles.  Holds id and name.
    """
    id_iter = itertools.count()
    style_names = []

    colors = ['red', 'black', 'blue', 'silver', 'gray', 'white', 'maroon',
              'purple', 'fuchsia', 'green', 'lime', 'olive', 'yellow',
              'navy', 'teal', 'aqua', 'brown', 'orange', 'cyan', 'magenta', 'beige', 'apricot']
    hex_values = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b',
                  'c', 'd', 'e', 'f', 'A', 'B', 'C', 'D', 'E', 'F']

    hex_lookup = {'red': '#FF0000', 'black': '#000000', 'blue': '#0000FF', 'silver': '#C0C0C0',
                  'gray': '#808080', 'white': '#FFFFFF', 'maroon': '#800000', 'purple': '#800080',
                  'fuchsia': '#FF00FF', 'green': '#008000', 'lime': '#00FF00', 'olive': '#808000',
                  'yellow': '#FFFF00', 'navy': '#000080', 'teal': '#008080', 'aqua': '#00FFFF',
                  'brown': '#9A6324', 'orange': '#f58231', 'cyan': '#42d4f4', 'magenta': '#f032e6',
                  'beige': '#fffac8', 'apricot': '#ffd8b1'}

    color_name_lookup = {'#FF0000': 'red', '#000000': 'black', '#0000FF': 'blue',
                         '#C0C0C0': 'silver', '#808080': 'gray', '#FFFFFF': 'white',
                         '#800000': 'maroon', '#800080': 'purple', '#FF00FF': 'fuchsia',
                         '#008000': 'green', '#00FF00': 'lime', '#808000': 'olive',
                         '#FFFF00': 'yellow', '#000080': 'navy', '#008080': 'teal',
                         '#00FFFF': 'aqua', '#9A6324': 'brown', '#f58231': 'orange',
                         '#42d4f4': 'cyan', '#f032e6': 'magenta', '#fffac8': 'beige',
                         '#ffd8b1': 'apricot'}

    def __init__(self, name: str) -> None:

        if isinstance(name, str):
            if name not in Style.style_names:
                self._name = name
                Style.style_names.append(name)
            else:
                raise ValueError("Name is already in use.")
        else:
            raise TypeError("Style names must be strings.")

        self._id = next(Style.id_iter)

    @classmethod
    def _is_color(cls, color: str) -> bool:
        """ Private function to verify that the color arguments are valid

        Parameters
        ----------
        color : str
            color by name or hex code

        Returns
        -------
        bool
            returns True if valid color name or hex value, else false
        """
        if color.lower() in DrawingStyle.colors:
            return True

        if color.lower() == "none":
            return True

        if color[0] == "#" and len(color) == 7:
            hex_color = True
            for c in range(1,7):
                if color[c] not in DrawingStyle.hex_values:
                    hex_color = False
            return hex_color
        return False

    @classmethod
    def _get_hex_color(cls, color: str) -> str:
        """Convert a color name or hex code to a normalized hex string.

        Args:
            color: Color name (e.g., "red") or hex code (e.g., "#FF0000").

        Returns:
            Lowercase hex color code, or "none" if invalid.
        """
        if color[0] == "#" and len(color) == 7:
            return color.lower()
        if color.lower() in Style.colors:
            return Style.hex_lookup[color.lower()].lower()
        return "none"

    @property
    def name(self) -> str:
        """ Read-only property for style name.

        Returns
        -------
        str
            Unique name given to the style.
        """
        return self._name

    @property
    def id(self) -> int:
        """ Read-only property for autogenerated ID

        Returns
        -------
        int
            Automatically generated ID
        """
        return self._id

    @classmethod
    def create_from_dict(cls, data: dict) -> Style:
        """ Class method to recreate the object from its serialization dict.

        Args:
            data (dict): Dictionary created via obj.parameters property.

        Returns:
            Style: instance of the class.
        """
        style = cls(name=data['Style']['name'])

        return style

    @property
    def parameters(self) -> dict:
        """ Parameters for the object as a dictionary for serialization.

        Returns:
            dict: dictionary with class name as top level key, that
            includes a dictionary with each parameter name as key and
            value as value.
        """
        return {"Style":
                {"name": self.name}}


class DrawingStyle(Style):
    """
        Class controlling the parameters for DrawingComponents.

    """
    # Figure out if 0-255 Tuples are also valid for colors
    # Add others https://htmlcolorcodes.com/color-names/

    def __init__(self,
                 name: str,
                 stroke: str = "black",
                 stroke_width: float = 0.2,
                 fill: str = 'none',
                 stroke_opacity: float = 1.0,
                 fill_opacity: float = 1.0):

        """ Creates a drawing style containing stroke and fill color and opactiy and stroke width

        Parameters
        ----------
        name : str
            unique name for the style
        stroke : str, optional
            color parameter of the stroke as word based color or hex code, by default "black"
        stroke_width : float, optional
            width of lines of drawing components, by default 0.2
        fill : str, optional
            color parameter of the fill of component as word based color or hex code,
            by default 'none'
        stroke_opacity : float, optional
            _description_, by default 1.0
        fill_opacity : float, optional
            _description_, by default 1.0

        """

        if Style._is_color(stroke):
            self._stroke = Style._get_hex_color(stroke)
        else:
            raise ValueError("Invalid stroke color. Must be color name/hex or none")

        self._stroke_width = stroke_width

        if Style._is_color(fill):
            self._fill = Style._get_hex_color(fill)
        else:
            raise ValueError("Invalid fill value.  Must be color name/hex or none")

        if 0.0 <= stroke_opacity <= 1.0:
            self._stroke_opacity = stroke_opacity
        else:
            raise ValueError("Invalid stroke opactity value, should be between 0.0 and 1.0.")

        if 0.0 <= fill_opacity <= 1.0:
            self._fill_opacity = fill_opacity
        else:
            raise ValueError("Invalid fill opactity value, should be between 0.0 and 1.0.")

        super().__init__(name=name)

    @classmethod
    def create_from_dict(cls, data: dict) -> DrawingStyle:
        """ Class method to recreate the object from its serialization dict.

        Args:
            data (dict): Dictionary created via obj.parameters property.

        Returns:
            DrawingStyle: instance of the class.
        """
        style = cls(name=data['DrawingStyle']['name'],
                    stroke=data['DrawingStyle']['stroke'],
                    stroke_width=data['DrawingStyle']['stroke_width'],
                    fill=data['DrawingStyle']['fill'],
                    stroke_opacity=data['DrawingStyle']['stroke_opacity'],
                    fill_opacity=data['DrawingStyle']['fill_opacity'])

        return style

    @property
    def stroke(self) -> str:
        """ Property for color of the drawing component line.

        Returns
        -------
        str
            color as hex code
        """
        return self._stroke

    @stroke.setter
    def stroke(self, color: str) -> None:
        """ Setter to update stroke color.

        Parameters
        ----------
        color : str
            Either color word or equivalent hex code
        """
        if self._is_color(color):
            self._stroke = Style._get_hex_color(color)
        else:
            raise ValueError("Invalid fill value.  Must be color name/hex or none")

    @property
    def fill(self) -> str:
        """ Property for color of the drawing component fill.

        Returns
        -------
        str
            color as hex code
        """
        return self._fill

    @fill.setter
    def fill(self, color: str) -> None:
        """ Setter to update fill color.

        Parameters
        ----------
        color : str
            Either color word or equivalent hex code
        """
        if self._is_color(color):
            self._fill = Style._get_hex_color(color)
        else:
            raise ValueError("Invalid fill value.  Must be color name/hex or none")

    @property
    def stroke_width(self) -> float:
        """ Stroke width for DrawingComponent.

        Returns
        -------
        float
            stroke width value
        """
        return self._stroke_width

    @stroke_width.setter
    def stroke_width(self, stroke_width: float) -> None:
        """ Stroke opacity for DrawingComponent.

        Parameters
        ----------
        stroke_width : float
            stroke width value
        """
        self._stroke_width = stroke_width

    @property
    def stroke_opacity(self) -> float:
        """ Stroke opacity for DrawingComponent.

        Returns
        -------
        float
            stroke opacity value
        """
        return self._stroke_opacity

    @stroke_opacity.setter
    def stroke_opacity(self, opacity: float) -> None:
        """ Stroke opacity for DrawingComponent.

        Parameters
        ----------
        opacity : float
            stroke opacity value

        Raises
        ------
        ValueError
            Error if opacity value is not between 0.0 and 1.0
        """
        if 0.0 <= opacity <= 1.0:
            self._stroke_opacity = opacity
        else:
            raise ValueError("Invalid stroke opactity value, should be between 0.0 and 1.0.")

    @property
    def fill_opacity(self) -> float:
        """ Fill Opacity for DrawingComponent

        Returns
        -------
        float
            fill opacity value
        """
        return self._fill_opacity

    @fill_opacity.setter
    def fill_opacity(self, opacity: float) -> None:
        """Fill Opacity for DrawingComponent

        Parameters
        ----------
        opacity : float
            fill opacity value

        Raises
        ------
        ValueError
            Error if opacity value is not between 0.0 and 1.0
        """
        if 0.0 <= opacity <= 1.0:
            self._fill_opacity = opacity
        else:
            raise ValueError("Invalid fill opactity value, should be between 0.0 and 1.0.")

    @property
    def parameters(self) -> dict:
        """ Parameters for the object as a dictionary for serialization.

        Returns:
            dict: dictionary with class name as top level key, that
            includes a dictionary with each parameter name as key and
            value as value.
        """
        return {"DrawingStyle":
                {"name": self.name,
                 "stroke": self.stroke,
                 "stroke_width": self.stroke_width,
                 "fill": self.fill,
                 "stroke_opacity": self.stroke_opacity,
                 "fill_opacity": self.fill_opacity}}


class Font:
    """
        Class for storing font information.
    """
    def __init__(
        self,
        family: str | list[str] = "sans-serif",
        style: str = "normal",
        variant: str = "normal",
        stretch: str = "normal",
        weight: str | int = "normal",
        size: str | float = 10.0,
        custom_font_paths: list[str] | None = None,
    ) -> None:
        """ Create a new font object with desired parameters.

        Args:
            family (List[str]): A list of font names in decreasing order of priority.
                                The items may include a generic font family name, either
                                'sans-serif', 'serif', 'cursive', 'fantasy', or 'monospace'.
                                Defaults to "sans-serif".
            style (str, optional): Either 'normal', 'italic' or 'oblique'.
                                Defaults to "normal".
            variant (str, optional): Either 'normal' or 'small-caps'.
                                Defaults to "normal".
            stretch (str, optional): A numeric value in the range 0-1000 or one of
                                'ultra-condensed', 'extra-condensed', 'condensed',
                                'semi-condensed', 'normal', 'semi-expanded', 'expanded',
                                'extra-expanded' or 'ultra-expanded'.
                                Defaults to "normal".
            weight (Union[str, int], optional): A numeric value in the range 0-1000 or one of
                                'ultralight', 'light', 'normal', 'regular', 'book', 'medium',
                                'roman', 'semibold', 'demibold', 'demi', 'bold', 'heavy',
                                'extra bold', 'black'.
                                Defaults to "normal".
            size (Union[str, float], optional): Either a relative value of 'xx-small', 'x-small',
                                'small', 'medium', 'large', 'x-large', 'xx-large' or an absolute
                                font size, e.g., 10.
                                Defaults to 10.0.
            custom_font_paths (List[str], optional): Path to desired fonts if custom location is
                                desired, otherwise system font locations are autoloaded.
                                Defaults to None.

        Raises:
            ValueError: If path provided as part of custom_font_paths is not valid.
        """
        self._platform = platform.system()
        self._font_paths = []

        if isinstance(custom_font_paths, str):
            custom_font_paths = [custom_font_paths]

        if custom_font_paths:
            for i, path in enumerate(custom_font_paths):
                if not os.path.exists(path):
                    error_str = f"{path} is not a valid path"
                    raise ValueError(error_str)
                if path[-1] not in ["\\", "/"]:
                    custom_font_paths[i] = path.replace("\\", "/") + "/"
            self._font_paths = custom_font_paths
        else:
            self._get_paths()

        self._font_manager = self._get_font_manager()

        self._font = self._font_manager.FontProperties(family=family,
                                                       style=style,
                                                       variant=variant,
                                                       stretch=stretch,
                                                       weight=weight,
                                                       size=size)

    @classmethod
    def create_from_dict(cls, data: dict) -> Font:
        """ Class method to recreate the object from its serialization dict.

        Args:
            data (dict): Dictionary created via obj.parameters property.

        Returns:
            Font: instance of the class.
        """
        font = Font(family=data['Font']['family'],
                    style=data['Font']['style'],
                    variant=data['Font']['variant'],
                    stretch=data['Font']['stretch'],
                    weight=data['Font']['weight'],
                    size=data['Font']['size'],
                    custom_font_paths=data['Font']['custom_font_paths'])
        return font

    @property
    def parameters(self) -> dict:
        """ Parameters for the object as a dictionary for serialization.

        Returns:
            dict: dictionary with class name as top level key, that
            includes a dictionary with each parameter name as key and
            value as value.
        """
        return {"Font":
                {"family": self.family,
                 "style": self.style,
                 "variant": self.variant,
                 "stretch": self.stretch,
                 "weight": self.weight,
                 "size": self.size,
                 "custom_font_paths": self._font_paths}}

    def _get_paths(self) -> None:
        """ Private method to set identify the valid font
        folder paths for the OS.  If the OS is not Windows,
        Darwin (newer MacOS), or Linux will raise value error.

        Raises
        ------
        ValueError
            Platform is out of scope for this class.
        """
        # The output of platform.system() is as follows:
        # Linux: Linux
        # Mac: Darwin
        # Windows: Windows
        if self._platform == "Windows":
            user_folder = ""f"C:/Users/{os.environ.get('USERNAME')}/"
            paths = ["C:/Windows/Fonts/",
            user_folder + "AppData/Local/Microsoft/Windows/Fonts/"]
        elif self._platform == "Darwin":
            paths = ["/System/Library/Fonts/",
                    "/Library/Fonts/",
                    "~/Library/Fonts/",
                    "/System Folder/Fonts/"]
        elif self._platform == "Linux":
            paths = [
                "/usr/share/fonts",
                "/usr/share/fonts/truetype",
                "/usr/share/fonts/opentype",
                "/usr/local/share/fonts",
                os.path.expanduser("~/.fonts"),
                os.path.expanduser("~/.local/share/fonts"),
            ]
            fc_list_commands = [
                "/usr/bin/fc-list",
                "/usr/sbin/fc-list",
                "/usr/local/sbin/fc-list",
                "/usr/local/bin/fc-list",
            ]
            for cmd in fc_list_commands:
                if os.path.isfile(cmd) and os.access(cmd, os.X_OK):
                    try:
                        result = subprocess.run(
                            [cmd],
                            stdout=subprocess.PIPE,
                            stderr=subprocess.DEVNULL,
                            text=True,
                            check=False,
                        )
                    except OSError:
                        continue
                    for line in result.stdout.splitlines():
                        font_path = line.split(":")[0].strip()
                        directory = os.path.dirname(font_path)
                        if directory:
                            paths.append(directory)
        else:
            raise ValueError("This class currently only supports \
                            automatically finding font folders for \
                            Windows, MacOS (newer), or Linux. \
                            Please specify the font paths.")
        seen_paths = set()
        for path in paths:
            normalized = os.path.expanduser(path)
            if not os.path.isdir(normalized):
                continue
            try:
                if not os.listdir(normalized):
                    continue
            except OSError:
                continue
            if normalized not in seen_paths:
                seen_paths.add(normalized)
                if normalized[-1] not in ("\\", "/"):
                    normalized = normalized + "/"
                self._font_paths.append(normalized)

    def _get_font_manager(self) -> font_manager:
        font_files = font_manager.findSystemFonts(fontpaths=self._font_paths)

        for font_file in font_files:
            font_manager.fontManager.addfont(font_file)
        return font_manager

    @property
    def family(self) -> str:
        """ Name of the current font family.

        Returns:
            str: font name.
        """
        return self._font.get_name()

    @family.setter
    def family(self, family: str) -> None:
        """ Update font family to nearest match of family argument.

        Args:
            family (str): Valid font family name from the systm paths
            or provided by the custom_font_path.
        """
        self._font.set_family(family)

    @property
    def font_file(self) -> str:
        """ Get the filepath of the current font.

        Returns:
            str: Filepath of the current font.
        """
        return self._font_manager.findfont(self._font)

    @property
    def style(self) -> str:
        """Current style of font: normal, italic, or oblique.

        Returns:
            str: string for current style
        """
        return self._font.get_style()

    @style.setter
    def style(self, style: str) -> None:
        """Change the style setting of the current font to
        either normal, italic, or oblique.

        Args:
            style (str): normal, italic, or oblique.

        Raises:
            ValueError: If one of the valid names not used.
        """
        if style in ["normal", "italic", "oblique"]:
            self._font.set_style(style)
        else:
            raise ValueError("Invalid style: must be normal, italic, or oblique")

    @property
    def variant(self) -> str:
        """Variant for the current font.

        Returns:
            str: Variant descriptor.
        """
        return self._font.get_variant()

    @variant.setter
    def variant(self, variant: str) -> None:
        """Update the variant for the current font.

        Args:
            variant (str): Either normal or small-caps.

        Raises:
            ValueError: Invalid variant value.
        """
        if variant in ["normal", "small-caps"]:
            self._font.set_variant(variant)
        else:
            raise ValueError("Invalid variant: must be normal or small-caps")

    @property
    def stretch(self) -> str:
        """Get the compression (kerning) of the current font.

        Returns:
            str: One of the names for font stretch.
        """
        return self._font.get_stretch()

    @stretch.setter
    def stretch(self, stretch: str | int) -> None:
        """Update the compression (kerning) of the current font.

        Args:
            stretch (str | int): A numeric value in the range 0-1000 or one of
                                'ultra-condensed', 'extra-condensed', 'condensed',
                                'semi-condensed', 'normal', 'semi-expanded', 'expanded',
                                'extra-expanded' or 'ultra-expanded'.

        Raises:
            ValueError: Invalid value not used for stretch.
        """

        valid_names = ['ultra-condensed', 'extra-condensed', 'condensed',
                       'semi-condensed', 'normal', 'semi-expanded', 'expanded',
                       'extra-expanded', 'ultra-expanded']

        if isinstance(stretch, str) and stretch in valid_names:
            self._font.set_stretch(stretch)
        elif isinstance(stretch, int) and (0 <= stretch <= 1000):
            self._font.set_stretch(stretch)
        else:
            raise ValueError(f"Invalid stretch value. Should either be 0-1000 or {valid_names}")

    @property
    def weight(self) -> str:
        """Current weight of the current font.

        Returns:
            str: weight name.
        """
        return self._font.get_weight()

    @weight.setter
    def weight(self, weight: str | int) -> None:
        """Update weight of the current font.

        Args:
            weight (str | int): A numeric value in the range 0-1000 or one of
                                'ultralight', 'light', 'normal', 'regular', 'book', 'medium',
                                'roman', 'semibold', 'demibold', 'demi', 'bold', 'heavy',
                                'extra bold', 'black'.

        Raises:
            ValueError: Invalid value used for weight.
        """

        valid_names = ['ultralight', 'light', 'normal', 'regular', 'book', 'medium',
                        'roman', 'semibold', 'demibold', 'demi', 'bold', 'heavy',
                        'extra bold', 'black']

        if isinstance(weight, str) and weight in valid_names:
            self._font.set_weight(weight)
        elif isinstance(weight, int) and (0 <= weight <= 1000):
            self._font.set_weight(weight)
        else:
            raise ValueError(f"Invalid weight value. Should either be 0-1000 or {valid_names}")

    @property
    def size(self) -> float:
        """Size of the current font in points.

        Returns:
            float: current font size in points.
        """
        return self._font.get_size_in_points()

    @size.setter
    def size(self, size: str | float) -> None:
        """Update size of current font.

        Args:
            size (str | float): Either a relative value of 'xx-small', 'x-small',
                                'small', 'medium', 'large', 'x-large', 'xx-large' or an absolute
                                font size, e.g., 10.

        Raises:
            ValueError: Invalid value used for size.
        """
        valid_names = ['xx-small', 'x-small', 'small', 'medium', 'large', 'x-large', 'xx-large']

        if isinstance(size, str) and size in valid_names:
            self._font.set_size(size)
        elif isinstance(size, float) and (0 < size <= 240):
            self._font.set_size(size)
        else:
            raise ValueError(f"Invalid size value. Should either be 0-1000 or {valid_names}")

    @property
    def configuration(self) -> str:
        """Currnt font settings.

        Returns:
            str: font settings.
        """
        return self._font.get_fontconfig_pattern()


class TextStyle(Style):
    """ Style information for text including font, color, anchor, subscript,
        superscript, and line spacing.
    """
    def __init__(self,
                 name: str,
                 font: Font) -> None:

        super().__init__(name)

        self.font = font
        self.color = "#000000"
        self.superscript = False
        self.subscript = False
        self.text_align = "start"
        self.line_spacing = 1.0

    @classmethod
    def create_from_dict(cls, data: dict) -> TextStyle:
        """ Class method to recreate the object from its serialization dict.

        Args:
            data (dict): Dictionary created via obj.parameters property.

        Returns:
            TextStyle: instance of the class.
        """
        font = Font.create_from_dict(data['TextStyle']['font'])
        style = cls(name=data['TextStyle']['name'], font=font)
        style.color = data['TextStyle']['color']
        style.superscript = data['TextStyle']['superscript']
        style.subscript = data['TextStyle']['subscript']
        style.text_align = data['TextStyle']['text_align']
        style.line_spacing = data['TextStyle']['line_spacing']

        return style

    @property
    def parameters(self) -> dict:
        """ Parameters for the object as a dictionary for serialization.

        Returns:
            dict: dictionary with class name as top level key, that
            includes a dictionary with each parameter name as key and
            value as value.
        """
        return {"TextStyle":
                {"name": self.name,
                 "color": self.color,
                 "superscript": self.superscript,
                 "subscript": self.subscript,
                 "text_align": self.text_align,
                 "line_spacing": self.line_spacing,
                 "font": self.font.parameters}}

    @property
    def font(self) -> Font:
        """Font object.

        Returns
        -------
        Font
            Font object.
        """
        return self._font

    @font.setter
    def font(self, font) -> None:
        if isinstance(font, Font):
            self._font = font
        else:
            raise TypeError("Font must be set with a Font type")

    @property
    def color(self) -> str:
        """ Fill color for text

        Returns
        -------
        str
            Hex code for color
        """
        return self._color

    @color.setter
    def color(self, value: str) -> None:
        """ Setter for updating fill color of text

        Parameters
        ----------
        value : str
            Either color word or equivalent hex code

        Raises
        ------
        ValueError
            Invalid color setting.
        """
        if self._is_color(value):
            self._color = Style._get_hex_color(value)
        else:
            raise ValueError("Invalid fill value.  Must be color name/hex or none")

    @property
    def subscript(self) -> bool:
        """Flag for subscript font

        Returns
        -------
        bool
            True if font is subscripted, false otherwise.
        """
        return self._subscript

    @subscript.setter
    def subscript(self, value: bool) -> None:
        """ Update subscript status.

        Parameters
        ----------
        value : bool
            True if font is subscripted, false otherwise.

        Raises
        ------
        TypeError
            raised if non-boolean argument passed.
        """
        if isinstance(value, bool):
            self._subscript = value
        else:
            raise TypeError("Subscript attribute is boolean.")

    @property
    def superscript(self) -> bool:
        """Flag for superscript font

        Returns
        -------
        bool
            True if font is superscripted, false otherwise.
        """
        return self._superscript

    @superscript.setter
    def superscript(self, value: bool) -> None:
        """ Update superscript status.

        Parameters
        ----------
        value : bool
            True if font is superscripted, false otherwise.

        Raises
        ------
        TypeError
            raised if non-boolean argument passed.
        """
        if isinstance(value, bool):
            self._superscript = value
        else:
            raise TypeError("Superscript attribute is boolean.")

    @property
    def text_align(self) -> str:
        """ Identifies if text is left (start), center,
            or right (end) aligned.

        Returns
        -------
        str
            text alignment string: start, center, end
        """
        return self._text_align

    @property
    def text_anchor(self) -> str:
        """ Identifies if text ancor is left (start), middle,
            or right (end) aligned.  Set by text align.

        Returns
        -------
        str
            text anchor string: start, middle, end
        """
        return self._text_anchor

    @text_align.setter
    def text_align(self, value: str) -> None:
        """ Updates text_align and text_anchor
            based on input value.  Sets the
            text_align and text_anchor parameters.

        Parameters
        ----------
        value : str
            Valid values:
               start - start, left
               end - end, right
               center - middle, center
        """
        value = value.lower()
        if value in ["start", "left"]:
            self._text_align = "start"
            self._text_anchor = "start"
        elif value in ["end", "right"]:
            self._text_align = "end"
            self._text_anchor = "end"
        elif value in ["middle", "center"]:
            self._text_align = "center"
            self._text_anchor = "middle"

    @property
    def line_spacing(self) -> float:
        """ Space between lines for multiline text.
        If set to default one the bounding boxes of each
        text line will be right on top of each other.

        Returns
        -------
        float
            Spacing between lines:
            - Less than 1 has the lines coming together.
            - 1 has the bounding boxes right on top of each other
            - more than 1 has a bounding box gap.
        """
        return self._line_spacing

    @line_spacing.setter
    def line_spacing(self, value: float) -> None:
        """ Update line spacing for multiline text.

        Parameters
        ----------
        value : float
            Spacing between lines:
            - Less than 1 has the lines coming together.
            - 1 has the bounding boxes right on top of each other
            - more than 1 has a bounding box gap.

        Raises
        ------
        ValueError
            If value is not >= 0 or is not float.
        """
        if isinstance(value, (float, int)) and value >= 0:
            self._line_spacing = value
        else:
            raise TypeError("Line Spacing must be a positive float")
